@@ -1,0 +1,9 @@
+<?xml version="1.0"?>
+<xsl:stylesheet xmlns:xsl="http://www.w3.org/1999/XSL/Transform"
+		version="1.0">
+
+  <xsl:param name="shade.verbatim.style" select="1"/>
+  <xsl:param name="use.id.as.filename" select="1"/>
+  <xsl:param name="html.stylesheet" select="'jhbuild.css'"/>
+
+</xsl:stylesheet>
