@@ -1,0 +1,15 @@
+tr.question > td > :first-child, tr.answer > td > :first-child {
+  margin-top: 0em;
+}
+
+.programlisting {
+  background: #eeeeff;
+  border: solid 1px #aaaaff;
+  padding: 0.5em;
+}
+
+.screen {
+  background: #eeeeee;
+  border: solid 1px #aaaaaa;
+  padding: 0.5em;
+}
