@@ -1,3 +1,12 @@
+2004-11-18  James Henstridge  <james@jamesh.id.au>
+
+	* doc/custom.xsl: some XSLT customisations.
+
+	* doc/jhbuild.css: some simple CSS to make the documentation look
+	a bit nicer.
+
+	* doc/jhbuild.xml: add some FAQs to the documentation.
+
 2004-11-17  Marco Pesenti Gritti  <marco@gnome.org>
 
 	* modulesets/freedesktop.modules:
